# Affine-Pose-Graph-Optimisation

./: CMakeLists.txt  README.md
affine g2o/data/: sim_case1.g2o  sim_case3.g2o
affine g2o/include/: AFFINE_EDGE.h  AFFINE_LIE.h  AFFINE_VERTEX.h
data/fetoscopic data/: readme.txt
data/g2o files/: sequence1_odometry.g2o  sequence3_odometry.g2o  sim_case2.g2o
g2o files/: sequence2_odometry.g2o  sim_gt.g2o
src/: affine_g2o.cpp  simulation_data_creation.cpp
